--- a/task_part_pages/pubspec.yaml
+++ b/task_part_pages/pubspec.yaml
@@ -17,3 +17,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
+  fonts:
+    - family: PilatExtended
+      fonts:
+        - asset: assets/fonts/PilatExtended-DemiBold.ttf
